--- a/nginx.conf
+++ b/nginx.conf
@@ -28,8 +28,8 @@ http {
         server_name _;
         sendfile on;
 
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|mp3|html)$ {
-            expires 1d;
+        location / {
+            proxy_pass http://localhost:3000;
         }
 
     }
